--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <p>Radio check. Pilot, please confirm.</p>
     <p>Control this is Pilot. Radio check confirmed.</p>
+    <p>Good moning Pilot. Sky all clear?</p>
   </body>
 </html>
