--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <p>Control this is Pilot. Radio check confirmed.</p>
     <p>Good moning Pilot. Sky all clear?</p>
     <p>Everything looks good here.</p>
+    <p>The coffee is brewed and will be beaming it up</p>
   </body>
 </html>
